--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lightdm-gtk-greeter (2.0.6-1pardus19) unstable; urgency=medium
+
+  [ İzzet Aydın ]
+  * Turkcelestirme
+
+ -- İzzet Aydın <izzet.aydin@pardus.org.tr>  Wed, 02 Sep 2020 17:52:56 +0300
+
 lightdm-gtk-greeter (2.0.6-1) unstable; urgency=medium
 
   * New upstream version 2.0.6
